[package]
name = "glore"
version = "0.1.2"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
description = "Rust log"
repository = "https://github.com/sigmaSd/Glore"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
